render yaml file22

--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: static
     plan: free
     buildCommand: npm install && npm run build
-    startCommand: npm run serve
+    startCommand: npm run preview
     staticPublishPath: dist
     # Add the following:
     routes:
